--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  background-image: url("./assets/images/bg_image.jpeg");
+  background-position: center;
+  background-size: cover;
+}
